created isolated stateless components

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "cSpell.words": ["Storyshots", "testid"]
+  "cSpell.words": [
+    "Mockstore",
+    "pinnedtasks",
+    "Storyshots",
+    "taskbox",
+    "testid"
+  ]
 }
