--- a/package.json
+++ b/package.json
@@ -13,19 +13,25 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.4.3",
     "@reduxjs/toolkit": "^1.8.1",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "autoprefixer": "^9.8.8",
+    "clsx": "^1.1.1",
+    "postcss": "^7.0.39",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.8",
     "react-scripts": "4.0.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "craco start && postcss src/css/app.css -o public/app.css",
+    "build": "craco build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006",
@@ -65,6 +71,7 @@
     "@storybook/addon-essentials": "^6.4.18",
     "@storybook/addon-interactions": "^6.4.18",
     "@storybook/addon-links": "^6.4.18",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addon-storyshots": "^6.4.21",
     "@storybook/node-logger": "^6.4.18",
     "@storybook/preset-create-react-app": "^3.1.7",
